--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -127,3 +127,11 @@ header{
   justify-content: space-evenly;
 }
 
+.button-inscription:hover span:after{
+  content: " Inscription";
+  transition: 0.2s ease-in-out;
+}
+.button-connexion:hover span:after{
+  content: " Connexion";
+  transition: 0.2s ease-in-out;
+}
