--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -55,11 +55,11 @@
       </div>
     </div>
     <button (click)="vinyleAnimation()" class="carousel-control-prev" type="button" data-bs-target="#carroussel-index" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev" aria-hidden="true"><img src="assets/img/previous.png"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button (click)="vinyleAnimation()" class="carousel-control-next" type="button" data-bs-target="#carroussel-index" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="carousel-control-next" aria-hidden="true"><img src="assets/img/next.png"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
