--- a/src/app/view/user-nft-list/user-nft-list.component.html
+++ b/src/app/view/user-nft-list/user-nft-list.component.html
@@ -1,6 +1,12 @@
 
 <div class="row my-5">
   <div class="col-4 my-gallery-info position-fixed rounded p-3">
+    <div class="text-dark">
+      <h2 class="text-center mb-3" *ngIf="decodedToken">Gallerie de {{decodedToken.nickname}}</h2>
+      <h2 class="text-center mb-3" *ngIf="user$|async as user">Gallerie de {{user.nickname}}</h2>
+      <p>Valeur d'achat totale: {{totalValue}} Eth</p>
+
+    </div>
     <div class="my-chart d-block">
       <canvas baseChart width="400" height="150"
               [type]="'line'"
