--- a/src/app/view/not-logged/not-logged.component.html
+++ b/src/app/view/not-logged/not-logged.component.html
@@ -1,12 +1,25 @@
-<div class="metal-login-page container my-5">
-  <h2>Bienvenue dans le Royaume du Métal!</h2>
-  <p>Vous êtes aux portes de la forteresse du métal ultime.</p>
-  <p>Pour pénétrer dans ce sanctuaire, vous devez :</p>
-  <ul>
-    <li>- Arborer une veste en cuir ou un t-shirt noir.</li>
-    <li>- Crier "METAAAAAAAAAAAL" à pleins poumons.</li>
-    <li>- Effectuer un headbang pendant 30 secondes sans interruption.</li>
-    <li>- Enfin, appuyer sur le bouton "Mosh pit" pour accéder à la page demandée.</li>
-  </ul>
-  <button type="button" class="btn btn-outline-light button-connexion" data-bs-toggle="modal" data-bs-target="#Connexion-backdrop" title="Connexion">Mosh pit</button>
+<div class="row">
+  <div class="metal-login-page container my-5 col-7 ps-5">
+    <h2>Bienvenue dans le Royaume du Métal!</h2>
+    <p>Vous êtes aux portes de la forteresse du métal ultime.</p>
+    <p>Pour pénétrer dans ce sanctuaire, vous devez :</p>
+    <ul>
+      <li>- Arborer une veste en cuir ou un t-shirt noir.</li>
+      <li>- Crier "METAAAAAAAAAAAL" à pleins poumons.</li>
+      <li>- Effectuer un headbang pendant 30 secondes sans interruption.</li>
+      <li>- Enfin, appuyer sur le bouton "Mosh pit" pour accéder à la page demandée.</li>
+    </ul>
+    <div class="my-5">
+      <button type="button" class="btn btn-outline-light button-connexion ms-5" data-bs-toggle="modal"
+              data-bs-target="#Connexion-backdrop" title="Connexion">Mosh pit
+      </button>
+
+    </div>
+  </div>
+
+  <div class="col-5">
+    <img class="mx-auto top-0 img-fluid my-5"
+         width="300"
+         src="assets/img/kisspng-black-death-plague-clip-art-black-death-cliparts-5a85d928540bf0.0842900615187213203443.png">
+  </div>
 </div>
