--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,7 @@ html, body{
   font-weight: 400;
   color: var(--font-color-main);
   background-color: var(--background);
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -51,3 +52,4 @@ h3{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
